<resources>
    <string name="app_name">C196 - Gavin Wade</string>
    <string name="view_terms">View Terms</string>
    <string name="view_courses">View Courses</string>
    <string name="view_assessments">View Assessments</string>
    <string name="title">Title</string>
    <string name="date_placeholder">1/1/2001</string>
    <string name="date_separator">-</string>
    <string name="courses">Courses</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="add_new">Add New</string>
    <string name="label_name">Name:</string>
    <string name="name">Name</string>
    <string name="label_phone">Phone:</string>
    <string name="phone">Phone</string>
    <string name="label_email">Email:</string>
    <string name="email">Email</string>
    <string name="course_mentors">Course Mentors</string>
    <string name="assessments">Assessments</string>
    <string name="notes">Notes</string>
    <string name="type">Type</string>
    <string name="due_date">Due Date</string>
    <string name="note">Note</string>
    <string name="term">Term</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="unassigned">Unassigned</string>
    <string name="add_with_plus">+ Add</string>
    <string name="share">Share</string>
    <string name="schedule_alert">Schedule Alert</string>
    <string name="start_date">Start Date</string>
    <string name="progress">Progress</string>
    <string name="completed">Completed</string>
    <string name="progress_separator">/</string>
    <string name="total">Total</string>
</resources>
