<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    tools:context="edu.wgu.gavin.c196.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnViewTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_terms"
            android:onClick="onBtnClick" />

        <Button
            android:id="@+id/btnViewCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/view_courses"
            android:onClick="onBtnClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/completed_courses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/progress_separator" />

            <TextView
                android:id="@+id/total_courses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@android:style/Widget.ProgressBar.Horizontal" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
