<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <EditText
        android:id="@+id/assessment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="20sp"
        android:inputType="text" />

    <Button
        android:id="@+id/assessment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/type"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:onClick="onTypeBtnClick" />

    <Button
        android:id="@+id/assessment_dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/due_date"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:onClick="onDateBtnClick" />

</LinearLayout>